# mpc_with_pf

./: .gitignore  CMakeLists.txt  package.xml  requirements.txt
config/: scene1.yaml
models/: scene1.xml
models/includes/: assets.xml  camera.xml  floor.xml  options.xml  panda.xml  shelf.xml  shelf_plane.xml
optimiser/: controller_manager.py  cost_sequence.py  dope.py  panda.py  panda_kinematics.py  pose_estimation.py  results.py  robot_base.py  rollout.py  simulator.py  solve.py  solve_real.py  states.py  trajectory.py  trajectory_optimiser_base.py  utils.py
optimiser/optimisers/: discovered_optimisers.py  optimiser_BASIC.py  optimiser_NMR.py  optimiser_PF.py
